// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls updateTree.js adds one source 1`] = `
"{
  \\"name\\": \\"root\\",
  \\"path\\": \\"\\",
  \\"contents\\": [
    {
      \\"name\\": \\"davidwalsh.name\\",
      \\"path\\": \\"davidwalsh.name\\",
      \\"contents\\": [
        {
          \\"name\\": \\"(index)\\",
          \\"path\\": \\"https://davidwalsh.name/\\",
          \\"contents\\": {
            \\"isPrettyPrinted\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"isWasm\\": false,
            \\"url\\": \\"https://davidwalsh.name/\\",
            \\"contentType\\": \\"\\",
            \\"isBlackBoxed\\": false,
            \\"id\\": \\"server1.conn13.child1/39\\"
          }
        },
        {
          \\"name\\": \\"source1.js\\",
          \\"path\\": \\"davidwalsh.name/source1.js\\",
          \\"contents\\": {
            \\"isPrettyPrinted\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"isWasm\\": false,
            \\"url\\": \\"https://davidwalsh.name/source1.js\\",
            \\"contentType\\": \\"\\",
            \\"isBlackBoxed\\": false,
            \\"id\\": \\"server1.conn13.child1/37\\"
          }
        }
      ]
    }
  ]
}"
`;

exports[`calls updateTree.js adds two sources 1`] = `
"{
  \\"name\\": \\"root\\",
  \\"path\\": \\"\\",
  \\"contents\\": [
    {
      \\"name\\": \\"davidwalsh.name\\",
      \\"path\\": \\"davidwalsh.name\\",
      \\"contents\\": [
        {
          \\"name\\": \\"(index)\\",
          \\"path\\": \\"https://davidwalsh.name/\\",
          \\"contents\\": {
            \\"isPrettyPrinted\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"isWasm\\": false,
            \\"url\\": \\"https://davidwalsh.name/\\",
            \\"contentType\\": \\"\\",
            \\"isBlackBoxed\\": false,
            \\"id\\": \\"server1.conn13.child1/39\\"
          }
        },
        {
          \\"name\\": \\"source1.js\\",
          \\"path\\": \\"davidwalsh.name/source1.js\\",
          \\"contents\\": {
            \\"isPrettyPrinted\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"isWasm\\": false,
            \\"url\\": \\"https://davidwalsh.name/source1.js\\",
            \\"contentType\\": \\"\\",
            \\"isBlackBoxed\\": false,
            \\"id\\": \\"server1.conn13.child1/37\\"
          }
        },
        {
          \\"name\\": \\"source2.js\\",
          \\"path\\": \\"davidwalsh.name/source2.js\\",
          \\"contents\\": {
            \\"isPrettyPrinted\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"isWasm\\": false,
            \\"url\\": \\"https://davidwalsh.name/source2.js\\",
            \\"contentType\\": \\"\\",
            \\"isBlackBoxed\\": false,
            \\"id\\": \\"server1.conn13.child1/40\\"
          }
        }
      ]
    }
  ]
}"
`;

exports[`calls updateTree.js shows all the sources 1`] = `
"{
  \\"name\\": \\"root\\",
  \\"path\\": \\"\\",
  \\"contents\\": [
    {
      \\"name\\": \\"davidwalsh.name\\",
      \\"path\\": \\"davidwalsh.name\\",
      \\"contents\\": [
        {
          \\"name\\": \\"(index)\\",
          \\"path\\": \\"https://davidwalsh.name/\\",
          \\"contents\\": {
            \\"isPrettyPrinted\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"isWasm\\": false,
            \\"url\\": \\"https://davidwalsh.name/\\",
            \\"contentType\\": \\"\\",
            \\"isBlackBoxed\\": false,
            \\"id\\": \\"server1.conn13.child1/39\\"
          }
        },
        {
          \\"name\\": \\"source1.js\\",
          \\"path\\": \\"davidwalsh.name/source1.js\\",
          \\"contents\\": {
            \\"isPrettyPrinted\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"isWasm\\": false,
            \\"url\\": \\"https://davidwalsh.name/source1.js\\",
            \\"contentType\\": \\"\\",
            \\"isBlackBoxed\\": false,
            \\"id\\": \\"server1.conn13.child1/37\\"
          }
        }
      ]
    }
  ]
}"
`;
